300-plex/30-plex-service-tcp.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-tcp
  labels:
    app: plex
    kubernetes.io/name: "plex"
  annotations:
    metallb.universe.tf/allow-shared-ip: metallb-plex-key
spec:
  selector:
    app: plex
  ports:
    - name: plex
      protocol: TCP
      port: 32400
      targetPort: 32400
    - name: plex-32469-tcp
      port: 32469
      targetPort: 32469
      protocol: TCP
  type: LoadBalancer
  loadBalancerIP: 192.168.0.71
