300-plex/30-plex-service-udp.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-udp
  labels:
    app: plex
    kubernetes.io/name: "plex"
  annotations:
    metallb.universe.tf/allow-shared-ip: metallb-plex-key
spec:
  selector:
    app: plex
  ports:
    - name: plex
      port: 32400
      protocol: UDP
      targetPort: 32400
    - name: plex-32469-udp
      port: 32469
      targetPort: 32469
      protocol: UDP
    - name: plex-5353-udp
      port: 5353
      targetPort: 5353
      protocol: UDP
    - name: plex-1900-udp
      port: 1900
      targetPort: 1900
      protocol: UDP
  type: LoadBalancer
  loadBalancerIP: 192.168.0.71
